Business and UI modules seperated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
     </div>
 
     <div class="jumbotron two">
-      <h3>About Ping Pong</h3>
+      <h3 class="styleheading">About Ping Pong</h3>
+      <p></p>
+      <h4>Created By:</h4>
+      <p>Lilo Onwuzu</p>
+      <h4>GitHub Username:</h4>
+      <p>lilo-onwuzu</p>
+      <h4>Level 1 Week 3 Project for:</h4>
+      <p>Javascript</p>
     </div>
 
     <div class="container">
@@ -45,13 +52,9 @@
 
         <div class="out">
           <ul span="pingpong">
-            <li></li>
+            <li id="test"></li>
           </ul>
         </div>
-
-        <div class="test">
-          <li id="new"></li>
-        </div
 
       </div>
     </div>
