Removes the list items before another run

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     </div>
 
     <div class="container">
-      <div class="row view">
+
+      <div class="view">
 
         <div class="rules">
           <h4>Rules:</h4>
@@ -50,13 +51,13 @@
           </div>
         </form>
 
-        <div class="out">
-          <ul span="pingpong">
-            <li id="test"></li>
-          </ul>
-        </div>
-
       </div>
+
+      <div class="out">
+        <ul><li id="result"></li></ul>
+      </div>
+
     </div>
+
   </body>
 </html>
